--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9fbf6c4d27.js" crossorigin="anonymous"></script>
+    <!-- ------------ -->
 
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- -------------- -->
 
     <!-- Local CSS File -->
     <link rel="stylesheet" href="styles.css">
+    <!-- -------------- -->
 
     <title>Le Pain</title>
 </head>
   <body>
-    <h1>Hello, world!</h1>
-
-
+    <!-- Navbar Component -->
+    <!-- navbar-dark is used on navbars with a dark background so the text can be seen. -->
+    <!-- sticky-top makes the element stick to the top of the viewport -->
+    <nav class="navbar bg-dark navbar-dark sticky-top">
+        <div class="container">
+            <!-- The navbar-brand class is used to make a logo or text larger to help it stand out -->
+            <a href="#" class="navbar-brand">
+                <i class="fa-solid fa-bread-slice"></i>
+                Le Pain
+            </a>
+        </div>
+    </nav>
 
 
 
