--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
         </div>
     </nav>
 
-
-
+    <!-- Showcase -->
+    <section class="d-flex flex-column justify-content-center align-items-center text-light m-0 p-5" id="showcase">
+        <h1>Le Pain</h1>
+        <p>When flour and water come together</p>
+        <a href="#gallery">Voir Les Pain</a>
+    </section>
 
 
 
