finished initial showcase section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
     <!-- Showcase -->
     <section class="d-flex flex-column justify-content-center align-items-center text-light m-0 p-5" id="showcase">
-        <h1>Le Pain</h1>
-        <p>When flour and water come together</p>
-        <a href="#gallery">Voir Les Pain</a>
+        <h1 class="display-3">Le Pain</h1>
+        <!-- lead makes a paragraph stands out by making the text larger -->
+        <p class="lead text-center">When flour and water come together</p>
+        <a href="#gallery" class="btn btn-secondary">Voir Les Pain</a>
     </section>
 
 
