tweaked card text and footer

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
     <footer class="bg-secondary">
       <div class="container">
-        <p>
+        <p class="lead m-0 p-4 text-center text-light">
           Built using
-          <a href="https://getbootstrap.com" class="text-light">Bootstrap</a>
+          <a href="https://getbootstrap.com" class="text-info">Bootstrap</a>
         </p>
       </div>
     </footer>
